Refac: GameLevel class (tbc)