@@ -88,18 +88,18 @@ public class RuleBasedPacSteering implements Steering {
     private CollectedData collectData(GameModel game) {
         GameLevel level = game.level().orElseThrow();
         var data = new CollectedData();
-        var pac = game.pac();
+        var pac = level.pac();
         Ghost hunterAhead = findHuntingGhostAhead(level); // Where is Hunter?
         if (hunterAhead != null) {
             data.hunterAhead = hunterAhead;
             data.hunterAheadDistance = pac.tile().manhattanDistance(hunterAhead.tile());
         }
-        Ghost hunterBehind = findHuntingGhostBehind();
+        Ghost hunterBehind = findHuntingGhostBehind(pac);
         if (hunterBehind != null) {
             data.hunterBehind = hunterBehind;
             data.hunterBehindDistance = pac.tile().manhattanDistance(hunterBehind.tile());
         }
-        data.frightenedGhosts = game.ghosts(GhostState.FRIGHTENED)
+        data.frightenedGhosts = level.ghosts(GhostState.FRIGHTENED)
             .filter(ghost -> ghost.tile().manhattanDistance(pac.tile()) <= CollectedData.MAX_GHOST_CHASE_DIST)
             .collect(Collectors.toList());
         data.frightenedGhostsDistance = data.frightenedGhosts.stream()
@@ -110,7 +110,7 @@ public class RuleBasedPacSteering implements Steering {
 
     private void takeAction(GameModel game, CollectedData data) {
         GameLevel level = game.level().orElseThrow();
-        var pac = game.pac();
+        var pac = level.pac();
         if (data.hunterAhead != null) {
             Direction escapeDir;
             if (data.hunterBehind != null) {
@@ -131,7 +131,7 @@ public class RuleBasedPacSteering implements Steering {
             return;
 
         if (!data.frightenedGhosts.isEmpty() && game.powerTimer().remaining() >= GameModel.TICKS_PER_SECOND) {
-            Ghost prey = data.frightenedGhosts.get(0);
+            Ghost prey = data.frightenedGhosts.getFirst();
             Logger.trace("Detected frightened ghost {} {} tiles away", prey.name(),
                 prey.tile().manhattanDistance(pac.tile()));
             pac.setTargetTile(prey.tile());
@@ -139,7 +139,7 @@ public class RuleBasedPacSteering implements Steering {
             Logger.trace("Active bonus detected, get it!");
             game.bonus().ifPresent(bonus -> pac.setTargetTile(tileAt(bonus.entity().position())));
         } else {
-            pac.setTargetTile(findTileFarthestFromGhosts(findNearestFoodTiles(level)));
+            pac.setTargetTile(findTileFarthestFromGhosts(pac, findNearestFoodTiles(level)));
         }
         pac.targetTile().ifPresent(target -> {
             pac.navigateTowardsTarget();
@@ -158,7 +158,7 @@ public class RuleBasedPacSteering implements Steering {
     }
 
     private Ghost findHuntingGhostAhead(GameLevel level) {
-        var pac = game.pac();
+        var pac = level.pac();
         Vector2i pacManTile = pac.tile();
         boolean energizerFound = false;
         for (int i = 1; i <= CollectedData.MAX_GHOST_AHEAD_DETECTION_DIST; ++i) {
@@ -171,7 +171,7 @@ public class RuleBasedPacSteering implements Steering {
             }
             var aheadLeft = ahead.plus(pac.moveDir().nextCounterClockwise().vector());
             var aheadRight = ahead.plus(pac.moveDir().nextClockwise().vector());
-            Iterable<Ghost> huntingGhosts = game.ghosts(GhostState.HUNTING_PAC)::iterator;
+            Iterable<Ghost> huntingGhosts = level.ghosts(GhostState.HUNTING_PAC)::iterator;
             for (var ghost : huntingGhosts) {
                 if (ghost.tile().equals(ahead) || ghost.tile().equals(aheadLeft) || ghost.tile().equals(aheadRight)) {
                     if (energizerFound) {
@@ -185,15 +185,15 @@ public class RuleBasedPacSteering implements Steering {
         return null;
     }
 
-    private Ghost findHuntingGhostBehind() {
-        var pac = game.pac();
+    private Ghost findHuntingGhostBehind(Pac pac) {
+        GameLevel level = game.level().orElseThrow();
         var pacManTile = pac.tile();
         for (int i = 1; i <= CollectedData.MAX_GHOST_BEHIND_DETECTION_DIST; ++i) {
             var behind = pacManTile.plus(pac.moveDir().opposite().vector().scaled(i));
             if (!pac.canAccessTile(behind)) {
                 break;
             }
-            Iterable<Ghost> huntingGhosts = game.ghosts(GhostState.HUNTING_PAC)::iterator;
+            Iterable<Ghost> huntingGhosts = level.ghosts(GhostState.HUNTING_PAC)::iterator;
             for (Ghost ghost : huntingGhosts) {
                 if (ghost.tile().equals(behind)) {
                     return ghost;
@@ -204,7 +204,7 @@ public class RuleBasedPacSteering implements Steering {
     }
 
     private Direction findEscapeDirectionExcluding(GameLevel level, Collection<Direction> forbidden) {
-        var pac = game.pac();
+        var pac = level.pac();
         Vector2i pacManTile = pac.tile();
         List<Direction> escapes = new ArrayList<>(4);
         for (Direction dir : Direction.shuffled()) {
@@ -227,7 +227,7 @@ public class RuleBasedPacSteering implements Steering {
 
     private List<Vector2i> findNearestFoodTiles(GameLevel level) {
         long time = System.nanoTime();
-        var pac = game.pac();
+        var pac = level.pac();
         List<Vector2i> foodTiles = new ArrayList<>();
         Vector2i pacManTile = pac.tile();
         float minDist = Float.MAX_VALUE;
@@ -255,16 +255,16 @@ public class RuleBasedPacSteering implements Steering {
         Logger.trace("Nearest food tiles from Pac-Man location {}: (time {} millis)", pacManTile, time / 1_000_000f);
         for (Vector2i t : foodTiles) {
             Logger.trace("\t{} ({} tiles away from Pac-Man, {} tiles away from ghosts)", t, t.manhattanDistance(pacManTile),
-                minDistanceFromGhosts());
+                minDistanceFromGhosts(pac));
         }
         return foodTiles;
     }
 
-    private Vector2i findTileFarthestFromGhosts(List<Vector2i> tiles) {
+    private Vector2i findTileFarthestFromGhosts(Pac pac, List<Vector2i> tiles) {
         Vector2i farthestTile = null;
         float maxDist = -1;
         for (Vector2i tile : tiles) {
-            float dist = minDistanceFromGhosts();
+            float dist = minDistanceFromGhosts(pac);
             if (dist > maxDist) {
                 maxDist = dist;
                 farthestTile = tile;
@@ -273,9 +273,10 @@ public class RuleBasedPacSteering implements Steering {
         return farthestTile;
     }
 
-    private float minDistanceFromGhosts() {
-        return (float) game.ghosts().map(Ghost::tile)
-            .mapToDouble(game.pac().tile()::manhattanDistance)
+    private float minDistanceFromGhosts(Pac pac) {
+        GameLevel level = game.level().orElseThrow();
+        return (float) level.ghosts().map(Ghost::tile)
+            .mapToDouble(pac.tile()::manhattanDistance)
             .min().orElse(Float.MAX_VALUE);
     }
 }
